test_new_output.txt
> Task :compileJava UP-TO-DATE
> Task :processResources
> Task :classes

> Task :compileTestJava FAILED
/home/phuongnha/SourcesCode/DACN_doctor_booking/src/test/java/com/example/doctorbooking/service/test/AppointmentServiceTest.java:39: error: cannot find symbol
    private AppointmentService appointmentService;
            ^
  symbol:   class AppointmentService
  location: class AppointmentServiceTest
1 error

[Incubating] Problems report is available at: file:///home/phuongnha/SourcesCode/DACN_doctor_booking/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/phuongnha/SourcesCode/DACN_doctor_booking/src/test/java/com/example/doctorbooking/service/test/AppointmentServiceTest.java:39: error: cannot find symbol
      private AppointmentService appointmentService;
              ^
    symbol:   class AppointmentService
    location: class AppointmentServiceTest
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.4.1/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 1s
3 actionable tasks: 2 executed, 1 up-to-date
